--- a/public/assets/scss/jkanban.scss
+++ b/public/assets/scss/jkanban.scss
@@ -76,7 +76,7 @@ $black: #000;
 
 .kanban-item {
 	background: $white;
-	padding: 15px;
+	// padding: 15px;
 	margin-bottom: 20px;
 	transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 
