--- a/public/assets/scss/theme/_sidebar.scss
+++ b/public/assets/scss/theme/_sidebar.scss
@@ -2,6 +2,9 @@
 /**=====================
     78. Sidebar CSS Start
 ==========================**/
+// body{
+//   display: none;
+// }
 %sidebar-after {
   position: absolute;
   content: "";
@@ -181,7 +184,7 @@
                       width: 200px;
                       right: -200px;
                       top: 0;
-                      background-color:$white;
+                      background: #fff;
                       border: none;
                       padding: 15px 0px 15px 0px;
                       box-shadow: 0 0 1px 0 $dark-gray;
@@ -189,13 +192,13 @@
                   }
                 }
                 .mega-menu-container {
-                  position:fixed;
-                  right:30px;
-                  z-index:4;
+                  position: absolute;
+                  right: -180%;
+                  z-index: 4;
                   box-shadow: 0 0 1px 0 $dark-gray;
                   padding: 30px;
-                  background-color: $white;
-                  width:95%;
+                  background: white;
+                  width: 95%;
                   border-radius: 4px;
                   .mega-box {
                     width: 20%;
